feat:adding hover states on email address and button for subscribing

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           <form>
             <div class="pr-5">
               <label for="email" class="block py-2 font-bold text-sm">Email address</label>
-              <input type="email" placeholder="email@company.com" class="block border border-gray-300 w-full rounded text-gray-900 bg-gray p-3 rounded rounded-lg" value="" name="email"/>
-              <button class="bg-darkSlateGrey text-white text-sm tracking-wide font-semibold p-4 my-5 w-full text-center rounded-lg">Subscribe to monthly newsletter</button>
+              <input type="email" placeholder="email@company.com" class="block border border-gray-300 w-full rounded text-gray-900 bg-gray p-3 rounded rounded-lg cursor-pointer hover:border-black hover:text-black" value="" name="email"/>
+              <button class="bg-darkSlateGrey text-white text-sm tracking-wide font-semibold p-4 my-5 w-full text-center rounded-lg hover:bg-gradient-to-r from-tomato to-orange-600">Subscribe to monthly newsletter</button>
             </div>
           </form>
       </div>
